update docs job to generate compile_commands.json for clang-assisted parsing

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,7 +41,9 @@ jobs:
           CC: gcc-12
           CXX: gcc-12
         working-directory: ${{github.workspace}}
-        run: xmake f -c -y --toolchain=envs
+        run: |
+          xmake f -c -y --toolchain=envs
+          xmake project -k compile_commands
 
       - name: Build Linux
         env:
