Temporarily remove empty all_of header to get docs to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ set(HYPERION_MPL_HEADERS
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/list.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/value.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/algorithms.h"
-    "${HYPERION_MPL_INCLUDE_PATH}/mpl/algorithms/all_of.h"
+    #"${HYPERION_MPL_INCLUDE_PATH}/mpl/algorithms/all_of.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/concepts.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/concepts/comparable.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/concepts/operator_able.h"
