--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Doxygen
-        run: sudo apt-get -y install doxygen
+        uses: ssciwr/doxygen-install@v1
+        with:
+          version: "1.10.0"
 
       - name: Install Graphviz
         run: sudo apt-get -y install graphviz
