--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,9 @@ set(HYPERION_MPL_HEADERS
     "${HYPERION_MPL_INCLUDE_PATH}/mpl.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/index.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/list.h"
+    "${HYPERION_MPL_INCLUDE_PATH}/mpl/metatypes.h"
+    "${HYPERION_MPL_INCLUDE_PATH}/mpl/pair.h"
+    "${HYPERION_MPL_INCLUDE_PATH}/mpl/type.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/value.h"
     "${HYPERION_MPL_INCLUDE_PATH}/mpl/algorithms.h"
     #"${HYPERION_MPL_INCLUDE_PATH}/mpl/algorithms/all_of.h"
