add main as a test in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
 project(hyperion_mpl LANGUAGES CXX)
 
+include(CTest)
+
 option(HYPERION_ENABLE_TRACY "Enables Profiling with Tracy" OFF)
 option(HYPERION_USE_FETCH_CONTENT "Enables FetchContent usage for getting dependencies" ON)
 
@@ -92,6 +94,9 @@ target_link_libraries(hyperion_mpl_main
 
 hyperion_compile_settings(hyperion_mpl_main)
 hyperion_enable_warnings(hyperion_mpl_main)
+
+add_test(NAME hyperion_mpl_main
+         COMMAND hyperion_mpl_main)
 
 set(HYPERION_MPL_DOXYGEN_OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/docs/_build/html")
 set(HYPERION_MPL_DOXYGEN_HTML "${HYPERION_MPL_DOXYGEN_OUTPUT_DIR}/index.html")
