Fix XMake Mac CI part 2?

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -128,7 +128,7 @@ jobs:
       - name: Install XMake
         run: |
           brew install xmake
-          sudo xmake update
+          xmake update --root
 
       - name: Install LLVM
         run: xrepo install -y llvm
