Fix XMake Mac CI part 3?

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -128,7 +128,7 @@ jobs:
       - name: Install XMake
         run: |
           brew install xmake
-          xmake update --root
+          xmake update
 
       - name: Install LLVM
         run: xrepo install -y llvm
