Fix XMake Mac CI part 4?

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -127,8 +127,7 @@ jobs:
 
       - name: Install XMake
         run: |
-          brew install xmake
-          xmake update
+          brew install xmake@2.8.7
 
       - name: Install LLVM
         run: xrepo install -y llvm
