Update homebrew in XMake Mac CI

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -127,6 +127,7 @@ jobs:
 
       - name: Install XMake
         run: |
+          brew update
           brew install xmake@2.8.7
 
       - name: Install LLVM
