--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,7 +7,38 @@ on:
     branches: ["*"]
 
 jobs:
-  build-linux:
+  build-linux-gcc-13-x64:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+      - uses: seanmiddleditch/gha-setup-ninja@v4
+
+      - name: Configure
+        env:
+          CC: gcc-13
+          CXX: gcc-13
+        working-directory: ${{github.workspace}}
+        run: cmake --preset env-cc-release
+
+      - name: Build
+        env:
+          CC: gcc-13
+          CXX: gcc-13
+          ACTIONS_STEP_DEBUG: true
+        working-directory: ${{github.workspace}}
+        run: cmake --build --preset env-cc-release
+
+      - name: Test
+        env:
+          CC: gcc-13
+          CXX: gcc-13
+          ACTIONS_STEP_DEBUG: true
+        working-directory: ${{github.workspace}}
+        run: ctest --preset env-cc-release --verbose
+
+  build-linux-clang-16-x64:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -25,30 +56,7 @@ jobs:
       - name: Replace clang-tidy
         run: sudo cp /usr/bin/clang-tidy-16 /usr/bin/clang-tidy -f
 
-      - name: Configure GCC
-        env:
-          CC: gcc-13
-          CXX: gcc-13
-        working-directory: ${{github.workspace}}
-        run: cmake --preset env-cc-release
-
-      - name: Build GCC
-        env:
-          CC: gcc-13
-          CXX: gcc-13
-          ACTIONS_STEP_DEBUG: true
-        working-directory: ${{github.workspace}}
-        run: cmake --build --preset env-cc-release
-
-      - name: Test GCC
-        env:
-          CC: gcc-13
-          CXX: gcc-13
-          ACTIONS_STEP_DEBUG: true
-        working-directory: ${{github.workspace}}
-        run: ctest --preset env-cc-release --verbose
-
-      - name: Configure Clang
+      - name: Configure
         env:
           CC: clang-16
           CXX: clang-16
@@ -57,7 +65,7 @@ jobs:
           rm -rf build
           cmake --preset env-cc-release
 
-      - name: Build Clang
+      - name: Build
         env:
           CC: clang-16
           CXX: clang-16
@@ -65,7 +73,7 @@ jobs:
         working-directory: ${{github.workspace}}
         run: cmake --build --preset env-cc-release
 
-      - name: Test Clang
+      - name: Test
         env:
           CC: clang-16
           CXX: clang-16
@@ -73,7 +81,7 @@ jobs:
         working-directory: ${{github.workspace}}
         run: ctest --preset env-cc-release --verbose
 
-  build-windows:
+  build-windows-msvc-x64:
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -110,7 +118,7 @@ jobs:
         working-directory: ${{github.workspace}}
         run: ctest --preset msvc-release --verbose
 
-  build-macos:
+  build-macos-clang-15-x64:
     runs-on: macos-latest
     strategy:
       fail-fast: false
