Update xmake jobs

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -56,6 +56,9 @@ jobs:
           xrepo add-repo -y hyperion "https://github.com/braxtons12/hyperion_packages.git"
           xrepo update-repo -y
           xrepo install -y --toolchain=envs "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=envs --configs="hyperion_enable_tracy=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=envs --configs="hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=envs --configs="hyperion_enable_tracy=true,hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
 
   build-linux-clang-16-x64:
     runs-on: ubuntu-latest
@@ -120,6 +123,9 @@ jobs:
           xrepo add-repo -y hyperion "https://github.com/braxtons12/hyperion_packages.git"
           xrepo update-repo -y
           xrepo install -y --toolchain=envs "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=envs --configs="hyperion_enable_tracy=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=envs --configs="hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=envs --configs="hyperion_enable_tracy=true,hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
 
   build-windows-msvc-x64:
     runs-on: windows-latest
@@ -173,6 +179,9 @@ jobs:
           xrepo add-repo -y hyperion "https://github.com/braxtons12/hyperion_packages.git"
           xrepo update-repo -y
           xrepo install -y --toolchain=msvc "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=msvc --configs="hyperion_enable_tracy=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=msvc --configs="hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=msvc --configs="hyperion_enable_tracy=true,hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
 
   build-macos-xcode-x64:
     runs-on: macos-latest
@@ -220,3 +229,6 @@ jobs:
           xrepo add-repo -y hyperion "https://github.com/braxtons12/hyperion_packages.git"
           xrepo update-repo -y
           xrepo install -y --toolchain=xcode "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=xcode --configs="hyperion_enable_tracy=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=xcode --configs="hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
+          xrepo install -y --toolchain=xcode --configs="hyperion_enable_tracy=true,hyperion_enable_testing=true" "hyperion_mpl ${{ steps.extract_branch.outputs.branch }}"
