Update xmake workflows

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,9 +23,6 @@ jobs:
       - name: Install LibGS
         run: sudo apt-get -y install libgs9 libgs9-common
 
-      - name: Install GCC 12
-        run: sudo apt-get -y install gcc-12
-
       - name: Install xmake
         run: |
           sudo add-apt-repository ppa:xmake-io/xmake
@@ -37,12 +34,9 @@ jobs:
           pip install sphinx breathe exhale myst-parser docutils pydata-sphinx-theme sphinx-sitemap
 
       - name: Configure Linux
-        env:
-          CC: gcc-12
-          CXX: gcc-12
         working-directory: ${{github.workspace}}
         run: |
-          xmake f -c -y --toolchain=envs
+          xmake f -c -y --toolchain=gcc-13
           xmake project -k compile_commands
 
       - name: Build Linux
