--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,40 +5,52 @@ on:
     branches: ["*"]
 
 jobs:
-  build-linux-gcc-13-x64:
+  linux-gcc-x64:
     runs-on: ubuntu-latest
     strategy:
+      matrix:
+        version: [12, 13]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: seanmiddleditch/gha-setup-ninja@v4
 
+      - name: Install Toolchains PPA
+        run: |
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo apt-get -y update
+
+      - name: Install GCC
+        run: sudo apt-get -y install gcc-${{matrix.version}} g++-${{matrix.version}}
+
       - name: Configure
         env:
-          CC: gcc-13
-          CXX: gcc-13
+          CC: gcc-${{matrix.version}}
+          CXX: g++-${{matrix.version}}
         working-directory: ${{github.workspace}}
         run: cmake --preset env-cc-release
 
       - name: Build
         env:
-          CC: gcc-13
-          CXX: gcc-13
+          CC: gcc-${{matrix.version}}
+          CXX: g++-${{matrix.version}}
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
         run: cmake --build --preset env-cc-release
 
       - name: Test
         env:
-          CC: gcc-13
-          CXX: gcc-13
+          CC: gcc-${{matrix.version}}
+          CXX: g++-${{matrix.version}}
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
         run: ctest --preset env-cc-release --verbose
 
-  build-linux-clang-16-x64:
+  linux-clang-x64:
     runs-on: ubuntu-latest
     strategy:
+      matrix:
+        version: [15, 16, 17, 18]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -48,16 +60,16 @@ jobs:
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
-          sudo ./llvm.sh 16
-          sudo apt-get -y install clang-tidy-16
+          sudo ./llvm.sh ${{matrix.version}}
+          sudo apt-get -y install clang-tidy-${{matrix.version}}
 
       - name: Replace clang-tidy
-        run: sudo cp /usr/bin/clang-tidy-16 /usr/bin/clang-tidy -f
+        run: sudo cp /usr/bin/clang-tidy-${{matrix.version}} /usr/bin/clang-tidy -f
 
       - name: Configure
         env:
-          CC: clang-16
-          CXX: clang-16
+          CC: clang-${{matrix.version}}
+          CXX: clang++-${{matrix.version}}
         working-directory: ${{github.workspace}}
         run: |
           rm -rf build
@@ -65,21 +77,21 @@ jobs:
 
       - name: Build
         env:
-          CC: clang-16
-          CXX: clang-16
+          CC: clang-${{matrix.version}}
+          CXX: clang++-${{matrix.version}}
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
         run: cmake --build --preset env-cc-release
 
       - name: Test
         env:
-          CC: clang-16
-          CXX: clang-16
+          CC: clang-${{matrix.version}}
+          CXX: clang++-${{matrix.version}}
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
         run: ctest --preset env-cc-release --verbose
 
-  build-windows-msvc-x64:
+  windows-msvc-x64:
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -116,38 +128,36 @@ jobs:
         working-directory: ${{github.workspace}}
         run: ctest --preset msvc-release --verbose
 
-  build-macos-clang-15-x64:
+  macos-clang-x64:
     runs-on: macos-latest
     strategy:
+      matrix:
+        version: [15, 16, 17, 18]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: seanmiddleditch/gha-setup-ninja@v4
 
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v1
-        with:
-          version: "15.0"
+      - name: Install LLVM
+        run: |
+          brew install llvm@${{matrix.version}}
+          echo "PATH=$(brew --prefix llvm@${{matrix.version}})/bin:$PATH" >> $GITHUB_ENV
+          echo "CC=$(brew --prefix llvm@${{matrix.version}})/bin/clang" >> $GITHUB_ENV
+          echo "CXX=$(brew --prefix llvm@${{matrix.version}})/bin/clang++" >> $GITHUB_ENV
+          echo "LDFLAGS='-L$(brew --prefix llvm@${{matrix.version}})/lib/c++ -Wl,-rpath,$(brew --prefix llvm@${{matrix.version}})/lib/c++'" >> $GITHUB_ENV
 
       - name: Configure
-        env:
-          CC: clang-15
-          CXX: clang-15
         working-directory: ${{github.workspace}}
         run: cmake --preset env-cc-release
 
       - name: Build
         env:
-          CC: clang-15
-          CXX: clang-15
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
         run: cmake --build --preset env-cc-release
 
       - name: Test
         env:
-          CC: clang-15
-          CXX: clang-15
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
         run: ctest --preset env-cc-release --verbose
