--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       fail-fast: false
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -33,6 +33,14 @@ jobs:
         run: |
           pip install sphinx breathe exhale myst-parser docutils pydata-sphinx-theme sphinx-sitemap
 
+      - name: Install Toolchains PPA
+        run: |
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo apt-get -y update
+
+      - name: Install GCC
+        run: sudo apt-get -y install gcc-13 g++-13
+
       - name: Configure Linux
         working-directory: ${{github.workspace}}
         run: |
@@ -41,8 +49,8 @@ jobs:
 
       - name: Build Linux
         env:
-          CC: gcc-12
-          CXX: gcc-12
+          CC: gcc-13
+          CXX: gcc-13
         working-directory: ${{github.workspace}}
         run: |
           mkdir -p docs/_build/html
